Mantis 0001588: Add support for exFAT.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.31) stable; urgency=low
 
   * Mantis 0001581: The progress dialog is not closed in case of an error.
+  * Mantis 0001588: Add support for exFAT.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 26 Jul 2016 18:22:07 +0200
 
