--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-08-05 11:55+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +33,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s доступно)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) использовано, %s доступно]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [на %s, %s]"
@@ -2286,7 +2286,7 @@ msgid "Paraguay"
 msgstr "Парагвай"
 
 msgid "Parent Device"
-msgstr ""
+msgstr "Родительское устройство"
 
 msgid "Parent interface"
 msgstr "Родительский интерфейс"
@@ -2404,7 +2404,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Пожалуйста, выберите стереть устройство или \"Отмена\" для отмены."
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Пожалуйста, сначала выберите устройство."
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
