--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault (3.0.31) stable; urgency=low
 
+  * Update locales.
+  * Various improvements.
   * Mantis 0001581: The progress dialog is not closed in case of an error.
   * Mantis 0001588: Add support for exFAT.
 
