--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.32) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Aug 2016 13:09:36 +0200
+
 openmediavault (3.0.31) stable; urgency=low
 
   * Update locales.
