--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.32) stable; urgency=low
 
   * Various improvements.
+  * Refactored omv-firstaid and added plugin mechanism.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Aug 2016 13:09:36 +0200
 
