--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.32) stable; urgency=low
 
   * Various improvements.
   * Refactored omv-firstaid and added plugin mechanism.
+  * Mantis 0001592: Send monit CPU usage alerts after N cycles.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Aug 2016 13:09:36 +0200
 
