--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.32) stable; urgency=low
 
+  * Update locales.
   * Various improvements.
   * Refactored omv-firstaid and added plugin mechanism.
   * Mantis 0001592: Send monit CPU usage alerts after N cycles.
