--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.33) stable; urgency=low
+
+  * Remove useless RPC application layer protocol.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 30 Aug 2016 11:41:17 +0200
+
 openmediavault (3.0.32) stable; urgency=low
 
   * Update locales.
