--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-22 20:48+0200\n"
-"PO-Revision-Date: 2016-08-22 18:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-08-25 12:43+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3946,7 +3946,7 @@ msgid "Web Administrator Password"
 msgstr "Heslo webového správce"
 
 msgid "Web control panel"
-msgstr ""
+msgstr "Webový ovládací panel"
 
 msgid "Wednesday"
 msgstr "Středa"
