--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-08-22 20:48+0200\n"
-"PO-Revision-Date: 2016-08-22 18:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-08-30 13:02+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -730,7 +730,7 @@ msgid "Create self-signed SSL certificate"
 msgstr "Önmaga aláírt SSL tanúsítvány létrehozása"
 
 msgid "Creating the file system, please wait ..."
-msgstr "Fájlrendszer létrehozása, kérlek várj ..."
+msgstr "Fájlrendszer létrehozása, kis türelmet ..."
 
 msgid "Critical"
 msgstr "Kritikus"
@@ -1808,7 +1808,7 @@ msgid "Loading ..."
 msgstr "Betöltés ..."
 
 msgid "Loading, please wait ..."
-msgstr "Betöltés, kérlek várj ..."
+msgstr "Betöltés, kis türelmet ..."
 
 msgid "Local"
 msgstr "Helyi"
@@ -2414,7 +2414,7 @@ msgid "Please reload the page to let the changes take effect."
 msgstr "Kérlek frissítsd az oldalt a változások érvénybe lépéséhez."
 
 msgid "Please wait ..."
-msgstr "Kérlek várj ..."
+msgstr "Kis türelmet ..."
 
 msgid ""
 "Please wait until the RAID has been initialized before creating a file "
@@ -3946,7 +3946,7 @@ msgid "Web Administrator Password"
 msgstr "Web adminisztrátor jelszó"
 
 msgid "Web control panel"
-msgstr ""
+msgstr "Web központ"
 
 msgid "Wednesday"
 msgstr "Szerda"
