--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault (3.0.35) stable; urgency=low
+
+  * Introduce the \OMV\System\Filesystem\ISharedFolderCandidate interface.
+    File systems that want to be handled as shared folder candidate must
+    implement this interface.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 07 Sep 2016 18:51:00 +0200
+
 openmediavault (3.0.34) stable; urgency=low
 
   * Fix regression from pull request #5.
