Log the used power management mode to syslog when omv-pm-standby is executed.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.36) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Sep 2016 16:14:18 +0200
+
 openmediavault (3.0.35) stable; urgency=low
 
   * Update locales.
