--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.36) stable; urgency=low
 
-  * 
+  * Various improvements.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 11 Sep 2016 16:14:18 +0200
 
