--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.8) stable; urgency=low
+
+  * Fix bug in OMVNetworkInterface::getState().
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 13 Sep 2016 10:44:51 +0200
+
 openmediavault (2.2.7) stable; urgency=low
 
   * Fix font issue in Chrome browser.
