--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.2.8) stable; urgency=low
 
+  * Various improvements.
   * Fix bug in OMVNetworkInterface::getState().
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 13 Sep 2016 10:44:51 +0200
