--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.37) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 20 Sep 2016 00:21:16 +0200
+
 openmediavault (3.0.36) stable; urgency=low
 
   * Various improvements.
