--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,8 @@
 openmediavault (3.0.38) stable; urgency=low
 
+  * Various improvements and bugfixes.
+  * Fix regression. NTFS file systems were not listed as shared folder
+    candidates.
   * Mantis 0001604: Update package dependency.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 21 Sep 2016 16:15:23 +0200
