--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-11-20 16:10+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,9 +51,6 @@ msgstr "Klient uvidí velká písmena, server malá"
 msgid "Comment"
 msgstr "Komentář"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Neprovádět :hex překlady pro soubory, jejichž názvy začínají tečkou."
-
 msgid "Edit share"
 msgstr "Upravit sdílení"
 
@@ -66,11 +63,11 @@ msgstr "Pro toto sdílení povolit podporu aplikace Time Machine"
 msgid "Enable user home directories."
 msgstr "Povolit domovské složky uživatelů."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Další možnosti"
-
-msgid "Forces filename restrictions"
-msgstr "Vynucení omezení v názvech souborů"
 
 msgid "General settings"
 msgstr "Obecná nastavení"
@@ -111,14 +108,17 @@ msgstr "Obousměrný převod na názvy malými písmeny"
 msgid "Make dot files invisible."
 msgstr "Nezobrazovat skryté soubory (ty s názvem začínajícím tečkou)."
 
-msgid "Name"
-msgstr "Název"
-
 msgid "None"
 msgstr "Žádné"
 
 msgid "Password"
 msgstr "Heslo"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Kvóta"
@@ -141,13 +141,6 @@ msgstr "Sdílení"
 msgid "The location of the files to share."
 msgstr "Umístění souborů ke sdílení."
 
-msgid "The name of the share."
-msgstr "Název sdílení."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Toto vynutí, aby znaky v názvech souborů byly omezeny na sadu používanou systémem Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Tato volba určuje zda by měla být měněna velikost písmen v názvech souborů."
 
@@ -162,14 +155,6 @@ msgstr "Názvy s velkými písmeny v obou směrech"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Použít unixová pověření dle AFP3."
-
-msgid "Use dots"
-msgstr "Použít tečky"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Pokud je tato volba nastavena, některé názvy se stanou vyhrazenými a nebude je možné použít. Konkrétně .Parent a cokoli, začínají na .Apple."
 
 msgid "n/a"
 msgstr "n/a"
