--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/da_DA/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Stefan Thrane Overby <stoverby@gmail.com>, 2012-2014
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-08-13 13:23+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,9 +51,6 @@ msgstr "Klienter ser store bogstaver, server ser små bogstaver"
 msgid "Comment"
 msgstr "Kommentar"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Lav ikke :hex oversættelser for dot filer."
-
 msgid "Edit share"
 msgstr "Rediger deling"
 
@@ -66,11 +63,11 @@ msgstr "Aktiver Time Machine understøttelse for denne delte mappe."
 msgid "Enable user home directories."
 msgstr "Aktiver bruger hjemme biblioteker."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Ekstra valgmuligheder"
-
-msgid "Forces filename restrictions"
-msgstr "Tvinger filnavns begrænsninger"
 
 msgid "General settings"
 msgstr "Generelle indstillinger"
@@ -111,14 +108,17 @@ msgstr "Små bogstavs navne i begge retninger"
 msgid "Make dot files invisible."
 msgstr "Skjul dot filer"
 
-msgid "Name"
-msgstr "Navn"
-
 msgid "None"
 msgstr "Ingen"
 
 msgid "Password"
 msgstr "Adgangskode"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Kvote"
@@ -141,13 +141,6 @@ msgstr "Delinger"
 msgid "The location of the files to share."
 msgstr "Placeringen af filer der skal deles."
 
-msgid "The name of the share."
-msgstr "Navn på delingen."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Dette tvinger filnavne at være begrænset til det tegnsæt der bruges af Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Denne valgmulighed håndtere, hvis forbogstavet af filnavne skal ændres."
 
@@ -162,14 +155,6 @@ msgstr "Store bogstavs navne i begge retninger"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Brug AFP3 unix rettigheder."
-
-msgid "Use dots"
-msgstr "Brug dots"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Når denne valgmulighed bliver markeret, vil visse filnavne blive ugyldige. Disse er .Parent og alt, der begynder med .Apple."
 
 msgid "n/a"
 msgstr "n/a"
