--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/es_ES/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/es_ES/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # jmcainzos <jmcainzos@vodafone.es>, 2012
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-08-25 09:54+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,9 +53,6 @@ msgstr "Los clientes ven mayúsculas, el servidor minúsculas"
 msgid "Comment"
 msgstr "Comentario"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "No realizar: Traducción hexadecimal para archivos con punto \".\""
-
 msgid "Edit share"
 msgstr "Editar compartido"
 
@@ -68,11 +65,11 @@ msgstr "Habilitar soporte Time Machine para este compartido"
 msgid "Enable user home directories."
 msgstr "Habilitar Directorios Home de Usuario."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Opciones Extra"
-
-msgid "Forces filename restrictions"
-msgstr "Fuerza restricciones de nombre de archivo"
 
 msgid "General settings"
 msgstr "Opciones generales"
@@ -113,14 +110,17 @@ msgstr "Nombre en minúsculas en ambas direcciones"
 msgid "Make dot files invisible."
 msgstr "Hace invisibles archivos que empiecen por punto\".\""
 
-msgid "Name"
-msgstr "Nombre"
-
 msgid "None"
 msgstr "Ninguno"
 
 msgid "Password"
 msgstr "Contraseña"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Cúota"
@@ -143,13 +143,6 @@ msgstr "Compartidos"
 msgid "The location of the files to share."
 msgstr "Ruta de los archivos a compartir"
 
-msgid "The name of the share."
-msgstr "Nombre del compartido"
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Esto fuerza a usar el conjunto de caracteres usados por Windows en el nombre de los archivos"
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Esta opción indica si los nombres de archivo deberían ser cambiados de mayúsculas a minúsculas (o viceversa)."
 
@@ -164,14 +157,6 @@ msgstr "Mayúsculas en ambas direcciones"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Usar privilegios Unix AFP3"
-
-msgid "Use dots"
-msgstr "Usar puntos \".\""
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Cuando se habilite esta opción, ciertos nombres de archivos no serán admitidos. En concreto aquellos que sean .Parent y cualquiera que empiece con .Apple."
 
 msgid "n/a"
 msgstr "no disponible"
