--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/fr_FR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/fr_FR/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Christophe Lherieau <skimpax@gmail.com>, 2012,2014
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-09-22 14:23+0000\n"
-"Last-Translator: Christophe Lherieau <skimpax@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: French (France) (http://www.transifex.com/votdev/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,9 +54,6 @@ msgstr "Client voit en majuscules, Serveur voit en minuscules"
 msgid "Comment"
 msgstr "Commentaires"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Ne pas faire de traduction :hex pour les fichiers systèmes."
-
 msgid "Edit share"
 msgstr "Modifier le partage"
 
@@ -69,11 +66,11 @@ msgstr "Activer le support Time Machine pour ce partage"
 msgid "Enable user home directories."
 msgstr "Active les répertoires personnels."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Options supplémentaires"
-
-msgid "Forces filename restrictions"
-msgstr "Forcer les restrictions des noms de fichier"
 
 msgid "General settings"
 msgstr "Paramètres généraux"
@@ -114,14 +111,17 @@ msgstr "Lowercases names in both directions"
 msgid "Make dot files invisible."
 msgstr "Rendre les fichiers systèmes non visible"
 
-msgid "Name"
-msgstr "Nom"
-
 msgid "None"
 msgstr "Aucun"
 
 msgid "Password"
 msgstr "Mot de passe"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Quota"
@@ -144,13 +144,6 @@ msgstr "Partages"
 msgid "The location of the files to share."
 msgstr "L'emplacement des fichiers à partager."
 
-msgid "The name of the share."
-msgstr "Le nom du partage."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Cette option restreint les noms de fichier aux jeux de caractères utilisés par Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Cette option gère le cas des noms de fichiers qui doivent être modifiés."
 
@@ -165,14 +158,6 @@ msgstr "Uppercases names in both directions"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Utiliser les rivilèges Unix AFP3."
-
-msgid "Use dots"
-msgstr "Utilisez des points \".\""
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Lorsque cette option est positionnée, certains noms de fichiers deviennent illégaux (les fichiers .Parent et tous ceux qui commencent par .Apple)."
 
 msgid "n/a"
 msgstr "n/a"
