--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/hu_HU/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-09-16 06:30+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,9 +53,6 @@ msgstr "A kliens nagybetűsnek, szerver kisbetűsnek látja"
 msgid "Comment"
 msgstr "Megjegyzés"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Ne tegyen :hex lefordítást pont kezdetű fájlokhoz."
-
 msgid "Edit share"
 msgstr "Megosztás szerkesztése"
 
@@ -68,11 +65,11 @@ msgstr "Time Machine támogatás bekapcsolása ehhez a megosztáshoz."
 msgid "Enable user home directories."
 msgstr "Felhasználói saját könyvtárak engedélyezése."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Extra beállítások"
-
-msgid "Forces filename restrictions"
-msgstr "Fájlnév korlátozások kényszerítése"
 
 msgid "General settings"
 msgstr "Általános beállítások"
@@ -113,14 +110,17 @@ msgstr "Mindkét utasításba kisbetűs nevek kellenek."
 msgid "Make dot files invisible."
 msgstr "Pont kezdetű fájlok elrejtése."
 
-msgid "Name"
-msgstr "Név"
-
 msgid "None"
 msgstr "Egyik sem"
 
 msgid "Password"
 msgstr "Jelszó"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Kvóta"
@@ -143,13 +143,6 @@ msgstr "Megosztások"
 msgid "The location of the files to share."
 msgstr "A megosztani kívánt fájlok helye."
 
-msgid "The name of the share."
-msgstr "A megosztás neve"
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "A fájlnevek a Windows által használt karakterekre korlátozódnak le."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Ez az opció kezeli azt az esetet, ha a fájlneveket meg kell változtatni."
 
@@ -164,14 +157,6 @@ msgstr "Mindkét utasításba nagybetűs nevek kellenek."
 
 msgid "Use AFP3 unix privileges."
 msgstr "AFP3 unix jogosultság használata."
-
-msgid "Use dots"
-msgstr "Használjon pont kezdést"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Mikor ez az opció be van állítva, bizonyos fájlnevek illegálissá válnak. Ilyenek a .Parent és más egyéb .Apple kezdetűek."
 
 msgid "n/a"
 msgstr "n/a"
