--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/it_IT/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # maurorulli <mauro.rulli@gmail.com>, 2012
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-05-25 17:24+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,9 +52,6 @@ msgstr "I client vedono caratteri maiuscoli, il server caratteri minuscoli"
 msgid "Comment"
 msgstr "Commento"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Non applicare la traduzione :hex per i file puntati."
-
 msgid "Edit share"
 msgstr "Modifica condivisione"
 
@@ -67,11 +64,11 @@ msgstr "Abilita il supporto Time Machine per questa condivisione"
 msgid "Enable user home directories."
 msgstr "Abilita directory home per l'utente."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Opzioni extra"
-
-msgid "Forces filename restrictions"
-msgstr "Forza restrizioni sul nome del file"
 
 msgid "General settings"
 msgstr "Impostazioni generali"
@@ -112,14 +109,17 @@ msgstr "Caratteri minuscoli in entrambe le direzioni"
 msgid "Make dot files invisible."
 msgstr "Rendi i file puntati invisibili."
 
-msgid "Name"
-msgstr "Nome"
-
 msgid "None"
 msgstr "Nessuno"
 
 msgid "Password"
 msgstr "Password"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Quota"
@@ -142,13 +142,6 @@ msgstr "Condivisioni"
 msgid "The location of the files to share."
 msgstr "Il percorso dei file da condividere."
 
-msgid "The name of the share."
-msgstr "Il nome della condivisione."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Questo forza i nomi dei file ad essere ristretti ai soli caratteri usati dal set di caratteri di Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Gestisce se le maiuscole/minuscole dei nomi dei file devono essere modificate."
 
@@ -163,14 +156,6 @@ msgstr "Caratteri maiuscoli in entrambe le direzioni"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Usa privilegi unix AFP3"
-
-msgid "Use dots"
-msgstr "Usa punti"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Se attiva alcuni nomi di file diventano inutilizzabili, quali .Parent e tutti quelli che iniziano per .Apple."
 
 msgid "n/a"
 msgstr "n/d"
