--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ja_JP/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ja_JP/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Toshihiro Kan <kansuke4649@gmail.com>, 2014
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-08-07 00:28+0000\n"
-"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,9 +51,6 @@ msgstr "クライアントは大文字、サーバは小文字で表示"
 msgid "Comment"
 msgstr "コメント"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "ドットファイルに対して :hex 変換をしない。"
-
 msgid "Edit share"
 msgstr "共有の編集"
 
@@ -66,11 +63,11 @@ msgstr "この共有でTime Machineサポートを有効にします。"
 msgid "Enable user home directories."
 msgstr "ユーザーホームディレクトリを有効にします。"
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "その他のオプション"
-
-msgid "Forces filename restrictions"
-msgstr "強制的にファイル名を制限"
 
 msgid "General settings"
 msgstr "一般設定"
@@ -111,14 +108,17 @@ msgstr "両方向で名前を小文字に"
 msgid "Make dot files invisible."
 msgstr "ドットファイルを非表示に。"
 
-msgid "Name"
-msgstr "名前"
-
 msgid "None"
 msgstr "なし"
 
 msgid "Password"
 msgstr "パスワード"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "クォータ"
@@ -141,13 +141,6 @@ msgstr "共有"
 msgid "The location of the files to share."
 msgstr "共有するファイルの場所。"
 
-msgid "The name of the share."
-msgstr "共有の名前。"
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Windowsで使用される文字セットにファイル名を制限することを強制します。"
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "このオプションは、ファイル名の大文字、小文字を変更する必要がある場合に使用します。"
 
@@ -162,14 +155,6 @@ msgstr "両方向で名前を大文字に"
 
 msgid "Use AFP3 unix privileges."
 msgstr "AFP3のUnixアクセス権を使用する。"
-
-msgid "Use dots"
-msgstr "ドットの使用"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "このオプションが設定されると、特定のファイル名が不正となります。それらは .Parent や、 .Appleで始まるものです。"
 
 msgid "n/a"
 msgstr "n/a"
