--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ko_KR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ko_KR/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-02-08 11:49+0000\n"
-"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/votdev/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,9 +52,6 @@ msgstr "클라이언트는 대문자로, 서버는 소문자로 보여집니다.
 msgid "Comment"
 msgstr "설명"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "숨김 파일들에 대해 :hex 변환을 하지 않습니다."
-
 msgid "Edit share"
 msgstr "공유 편집"
 
@@ -67,11 +64,11 @@ msgstr "이 공유에 타임 머신 지원 활성화"
 msgid "Enable user home directories."
 msgstr "사용자 홈 경로 활성화"
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "추가 옵션"
-
-msgid "Forces filename restrictions"
-msgstr "강제 파일 이름 제한"
 
 msgid "General settings"
 msgstr "일반 설정"
@@ -112,14 +109,17 @@ msgstr "양쪽 모두에서 소문자 이름을 사용합니다."
 msgid "Make dot files invisible."
 msgstr "이름이 온점으로 시작하는 파일을 숨깁니다."
 
-msgid "Name"
-msgstr "이름"
-
 msgid "None"
 msgstr "없음"
 
 msgid "Password"
 msgstr "암호"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "할당량"
@@ -142,13 +142,6 @@ msgstr "공유"
 msgid "The location of the files to share."
 msgstr "공유할 파일 위치"
 
-msgid "The name of the share."
-msgstr "공유 이름"
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "파일 이름을 윈도우즈에서 사용되는 문자 집합으로 제한합니다. "
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "이 옵션은 파일 이름이 바뀌어야 하는 상황을 다룹니다."
 
@@ -163,14 +156,6 @@ msgstr "양쪽 모두에서 대문자 이름을 사용합니다."
 
 msgid "Use AFP3 unix privileges."
 msgstr "AFP3 UNIX 권한 사용"
-
-msgid "Use dots"
-msgstr "온점을 사용"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "이 옵션이 설정될 때 .Parent나 .Apple로 시작되는 일부 파일 이름은 유효하지 않게 됩니다."
 
 msgid "n/a"
 msgstr "해당 없음"
