--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/nl_NL/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/nl_NL/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Milan Toet <milantoet@gmail.com>, 2012-2013
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-11-16 11:59+0000\n"
-"Last-Translator: Tim <co_ti@hotmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/votdev/openmediavault/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,9 +52,6 @@ msgstr "Cliënt ziet hoofdletters, server ziet kleine letters"
 msgid "Comment"
 msgstr "Opmerking"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Doe geen :hex vertaling voor punt bestanden."
-
 msgid "Edit share"
 msgstr "Gedeelde bron aanpassen"
 
@@ -67,11 +64,11 @@ msgstr "Time Machine ondersteuning voor deze gedeelde bron inschakelen."
 msgid "Enable user home directories."
 msgstr "Gebruikersthuismappen inschakelen"
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Extra opties"
-
-msgid "Forces filename restrictions"
-msgstr "Dwingt bestandsnaambeperkingen af"
 
 msgid "General settings"
 msgstr "Algemene instellingen"
@@ -112,14 +109,17 @@ msgstr "Namen met kleine letters in beide richtingen"
 msgid "Make dot files invisible."
 msgstr "Puntbestanden verbergen."
 
-msgid "Name"
-msgstr "Naam"
-
 msgid "None"
 msgstr "Geen"
 
 msgid "Password"
 msgstr "Wachtwoord"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Quota"
@@ -142,13 +142,6 @@ msgstr "Gedeelde bronnen"
 msgid "The location of the files to share."
 msgstr "De locatie van de te delen bestanden."
 
-msgid "The name of the share."
-msgstr "De naam van de gedeelde bron."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Dit dwingt gebruik van bestandsnamen volgens de door Windows gebruikte tekenset af."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Deze optie grijpt in, als de hoofd, of kleine letters van bestandsnamen moeten worden aangepast."
 
@@ -163,14 +156,6 @@ msgstr "Hoofdletter namen in beide richtingen"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Gebruik AFP3 unix-toegangsrechten."
-
-msgid "Use dots"
-msgstr "Gebruik punten"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Als deze optie is ingesteld, dan worden bepaalde bestandsnamen ongeldig. Dit betreft .Parent bestandsnamen en alles dat begint met .Apple."
 
 msgid "n/a"
 msgstr "n.v.t."
