--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pl_PL/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pl_PL/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-08-15 20:50+0000\n"
-"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,9 +53,6 @@ msgstr "Klient widzi wielkie, serwer małe litery"
 msgid "Comment"
 msgstr "Komentarz"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Nie wykonuj tłumaczenia :hex dla plików dot."
-
 msgid "Edit share"
 msgstr "Edytuj udział"
 
@@ -68,11 +65,11 @@ msgstr "Włącz obsługę Time Machine dla tego zasobu."
 msgid "Enable user home directories."
 msgstr "Włącz katalogi domowe użytkowników"
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Dodatkowe opcje"
-
-msgid "Forces filename restrictions"
-msgstr "Wymuś ograniczenia nazwy pliku"
 
 msgid "General settings"
 msgstr "Ustawienia"
@@ -113,14 +110,17 @@ msgstr "Nazwy małą literą w obu kierunkach"
 msgid "Make dot files invisible."
 msgstr "Ustaw pliki dot jako niewidoczne."
 
-msgid "Name"
-msgstr "Nazwa"
-
 msgid "None"
 msgstr "Żaden"
 
 msgid "Password"
 msgstr "Hasło"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Udział"
@@ -143,13 +143,6 @@ msgstr "Zasoby"
 msgid "The location of the files to share."
 msgstr "Lokalizacja plików do współdzielenia."
 
-msgid "The name of the share."
-msgstr "Nazwa zasobu."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Wymusza używanie nazw plików Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Ta opcja ustala, czy nazwy plików powinny być zmieniane."
 
@@ -164,14 +157,6 @@ msgstr "Nazwy wielką literą w obu kierunkach"
 
 msgid "Use AFP3 unix privileges."
 msgstr "Używaj uprawnień AFP3 Unix'a"
-
-msgid "Use dots"
-msgstr "Używaj dot'ów"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Kiedy zostaje włączona ta opcja, pewne nazwy plików stają się niedozwolone. Są to .Parent i jakiekolwiek zaczynające się na .Apple"
 
 msgid "n/a"
 msgstr "niedostępne"
