--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pt_PT/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pt_PT/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Nelson Rosado <nelsontrosado@gmail.com>, 2012,2014
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-09-16 11:36+0000\n"
-"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/votdev/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,9 +52,6 @@ msgstr "Cliente vê maiúsculas, servidor vê minúsculas"
 msgid "Comment"
 msgstr "Comentário"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Não faça: tradução hexadecimal para arquivos de pontos."
-
 msgid "Edit share"
 msgstr "Editar partilha"
 
@@ -67,11 +64,11 @@ msgstr "Ativar o suporte do Time Machine para esta partilha."
 msgid "Enable user home directories."
 msgstr "Habilitar diretórios home dos usuários."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Opções extra"
-
-msgid "Forces filename restrictions"
-msgstr "Forçar restrição de ficheiros"
 
 msgid "General settings"
 msgstr "Definições gerais"
@@ -112,14 +109,17 @@ msgstr "Nomes em minúsculas em ambas as direções."
 msgid "Make dot files invisible."
 msgstr "Tornar ficheiros dot invisiveis."
 
-msgid "Name"
-msgstr "Nome"
-
 msgid "None"
 msgstr "Nada"
 
 msgid "Password"
 msgstr "Senha de acesso"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Quota"
@@ -142,13 +142,6 @@ msgstr "Partilhas"
 msgid "The location of the files to share."
 msgstr "A localização do ficheiro para partilha."
 
-msgid "The name of the share."
-msgstr "O nome da partilha."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Isto força os nomes dos ficheiros para se restringirem ao conjunto de caráteres usados pelo Windows."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Esta opção trata, no caso dos nomes de arquivos devam ser alterados."
 
@@ -163,14 +156,6 @@ msgstr "Nomes em maiúsculas nas duas direções."
 
 msgid "Use AFP3 unix privileges."
 msgstr "Usar previlégios AFP3 Unix"
-
-msgid "Use dots"
-msgstr "Usar dots"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Quando esta opção está ativa, alguns nome passam a estar ilegais. Eles são .Parent e qualquer coisa que comece por .Apple"
 
 msgid "n/a"
 msgstr "n/a"
