--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/tr_TR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/tr_TR/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # Serhat SUT <serhat.sut@gmail.com>, 2012-2014
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-09-14 06:18+0000\n"
-"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,9 +51,6 @@ msgstr "İstenci büyük harf görür, sunucu küçük harf görür"
 msgid "Comment"
 msgstr "Açıklama"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "Yapmayın : noktalı dosyaların hex formatına dönüştürülmesi."
-
 msgid "Edit share"
 msgstr "Paylaşım düzenle"
 
@@ -66,11 +63,11 @@ msgstr "Bu paylaşım için Zaman Makinası desteğini çalıştır."
 msgid "Enable user home directories."
 msgstr "Kullanıcı ana klasörlerine izin ver."
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Ekstra seçenekler"
-
-msgid "Forces filename restrictions"
-msgstr "Dosya adı sınırlamalarını uygula"
 
 msgid "General settings"
 msgstr "Genel ayarlar"
@@ -111,14 +108,17 @@ msgstr "Her iki yönde de isimleri küçük harfe çevirir"
 msgid "Make dot files invisible."
 msgstr "Noktalı dosyaları görünmez yap."
 
-msgid "Name"
-msgstr "İsim"
-
 msgid "None"
 msgstr "Hiç"
 
 msgid "Password"
 msgstr "Şifre"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "Kota"
@@ -141,13 +141,6 @@ msgstr "Paylaşımlar"
 msgid "The location of the files to share."
 msgstr "Paylaşılan dosyaların yeri."
 
-msgid "The name of the share."
-msgstr "Paylaşımın adı."
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "Bu, dosya isimlerinde Windows tarafından kullanılan karakter setini zorunlu kılar."
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "Bu seçenek, dosya isimlerinin değiştirilmesi gerektiği durumda çalışır."
 
@@ -162,14 +155,6 @@ msgstr "Her iki yönde de isimleri büyük harfe çevirir"
 
 msgid "Use AFP3 unix privileges."
 msgstr "AFP3 unix haklarını kullan."
-
-msgid "Use dots"
-msgstr "Noktaları kullan"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "Bu seçenek ayarlandığında belirli dosya isimleri geçersiz olacaktır. Bunlar .Parent ve .Apple ile başlayan herşeydir."
 
 msgid "n/a"
 msgstr "yok"
