--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/zh_TW/openmediavault-netatalk.po
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
 # kochin <kochinc@outlook.com>, 2013-2014
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2014-08-06 15:05+0000\n"
-"Last-Translator: kochin <kochinc@outlook.com>\n"
+"POT-Creation-Date: 2016-09-23 21:35+0200\n"
+"PO-Revision-Date: 2016-09-23 19:35+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,9 +51,6 @@ msgstr "客戶端看到大寫字母，伺服器看到小寫字母"
 msgid "Comment"
 msgstr "註釋"
 
-msgid "Don't do :hex translation for dot files."
-msgstr "對點檔案不做 :hex 轉換。"
-
 msgid "Edit share"
 msgstr "編輯共享"
 
@@ -66,11 +63,11 @@ msgstr "對這個共享啟用 Time Machine。"
 msgid "Enable user home directories."
 msgstr "啟用用戶的家目錄。"
 
+msgid "Enabled"
+msgstr ""
+
 msgid "Extra options"
 msgstr "額外選項"
-
-msgid "Forces filename restrictions"
-msgstr "強迫檔案名稱限制"
 
 msgid "General settings"
 msgstr "一般設定"
@@ -111,14 +108,17 @@ msgstr "在兩個方向都用小寫字母名稱"
 msgid "Make dot files invisible."
 msgstr "使點檔案看不見。"
 
-msgid "Name"
-msgstr "名稱"
-
 msgid "None"
 msgstr "無"
 
 msgid "Password"
 msgstr "密碼"
+
+msgid ""
+"Please check the <a "
+"href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid "Quota"
 msgstr "配額"
@@ -141,13 +141,6 @@ msgstr "共享"
 msgid "The location of the files to share."
 msgstr "用來共享之檔案的位置。"
 
-msgid "The name of the share."
-msgstr "該共享的名稱。"
-
-msgid ""
-"This forces filenames to be restricted to the character set used by Windows."
-msgstr "這將迫使檔案名稱只能限於 Windows 所使用的字符集。"
-
 msgid "This option handles, if the case of filenames should be changed."
 msgstr "此選項處理是否檔案名稱的大小寫應該被改變。"
 
@@ -162,14 +155,6 @@ msgstr "在兩個方向都用大寫字母名稱"
 
 msgid "Use AFP3 unix privileges."
 msgstr "使用 AFP3 unix 權限。"
-
-msgid "Use dots"
-msgstr "使用點檔案"
-
-msgid ""
-"When this option gets set, certain file names become illegal. These are "
-".Parent and anything that starts with .Apple."
-msgstr "當此選項被設定，某些檔案名稱將成為不合法。這些是 .Parent 及任何開頭為 .Apple 之檔案。"
 
 msgid "n/a"
 msgstr "n/a"
